Testing Save/Commit functionality from Visual Studio

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
        <p id="Rando">Derp</p> 
        <p id="RandoN"></p>
         -->
+    <p>This is a test on Visual Studio auto syncing saved data.</p>
 </body>
 </html>
