Mgit- test commit with a android editor.

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
        <p id="RandoN"></p>
         -->
     <p>This is a test on Visual Studio auto syncing saved data.</p>
+    <p>This is a test of an android editingof files & syncing of it to git & back.</p>
 </body>
 </html>
