Added Css, testing formating Removed test messages

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8" />
     <title>Test Page - WIP</title>
     <script type="text/javascript" src="Scram.js"></script>
+    <link href="StyleSheet" hreflang="Style.css" />
 </head>
 <body>
+    <p>This is a test</p>
     <!--  Test section, HTML side
        <button onclick="SeedT()" id="Toggle">Random</button>
-       <p id="Rando">Derp</p> 
+       <p id="Rando">Derp</p>
        <p id="RandoN"></p>
         -->
-    <p>This is a test on Visual Studio auto syncing saved data.</p>
-    <p>This is a test of an android editingof files & syncing of it to git & back.</p>
+
 </body>
 </html>
