alignment of the UI, setup the 'play area' with 10x10 grid of stacked dives that can be used to  show images in alignment.
--
Notes,
setup to use mathmatical naming to avoid addressing all the divs one by one. - Might not be plausibe, might need id's for each one

--- a/index.html
+++ b/index.html
@@ -1,13 +1,120 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<title>Web Coding -Wip</title>
 <head>
     <meta charset="utf-8" />
     <title>Test Page - WIP</title>
     <script type="text/javascript" src="Scram.js"></script>
-    <link href="StyleSheet" hreflang="Style.css" />
+    <link rel="stylesheet" href="IndexStuff.css">
 </head>
-<body>
-    <p>This is a test</p>
+<body class="portal">
+    <div class="portal jump"></div> <!--This is to control text & give flow w/e adjusting the absolute & alignment of the grid of images -->
+    <div id="Play">
+        <div class="Tile" style="top: 0%p; left: 0%;"></div>
+        <div class="Tile" style="top: 10%; left: 0%;"></div>
+        <div class="Tile" style="top: 20%; left: 0%;"></div>
+        <div class="Tile" style="top: 30%; left: 0%;"></div>
+        <div class="Tile" style="top: 40%; left: 0%;"></div>
+        <div class="Tile" style="top: 50%; left: 0%;"></div>
+        <div class="Tile" style="top: 60%; left: 0%;"></div>
+        <div class="Tile" style="top: 70%; left: 0%;"></div>
+        <div class="Tile" style="top: 80%; left: 0%;"></div>
+        <div class="Tile" style="top: 90%; left: 0%;"></div>
+        <div class="Tile" style="top: 0%; left: 10%;"></div>
+        <div class="Tile" style="top: 10%; left: 10%;"></div>
+        <div class="Tile" style="top: 20%; left: 10%;"></div>
+        <div class="Tile" style="top: 30%; left: 10%;"></div>
+        <div class="Tile" style="top: 40%; left: 10%;"></div>
+        <div class="Tile" style="top: 50%; left: 10%;"></div>
+        <div class="Tile" style="top: 60%; left: 10%;"></div>
+        <div class="Tile" style="top: 70%; left: 10%;"></div>
+        <div class="Tile" style="top: 80%; left: 10%;"></div>
+        <div class="Tile" style="top: 90%; left: 10%;"></div>
+        <div class="Tile" style="top: 0%; left: 20%;"></div>
+        <div class="Tile" style="top: 10%; left: 20%;"></div>
+        <div class="Tile" style="top: 20%; left: 20%;"></div>
+        <div class="Tile" style="top: 30%; left: 20%;"></div>
+        <div class="Tile" style="top: 40%; left: 20%;"></div>
+        <div class="Tile" style="top: 50%; left: 20%;"></div>
+        <div class="Tile" style="top: 60%; left: 20%;"></div>
+        <div class="Tile" style="top: 70%; left: 20%;"></div>
+        <div class="Tile" style="top: 80%; left: 20%;"></div>
+        <div class="Tile" style="top: 90%; left: 20%;"></div>
+        <div class="Tile" style="top: 0%; left: 30%;"></div>
+        <div class="Tile" style="top: 10%; left: 30%;"></div>
+        <div class="Tile" style="top: 20%; left: 30%;"></div>
+        <div class="Tile" style="top: 30%; left: 30%;"></div>
+        <div class="Tile" style="top: 40%; left: 30%;"></div>
+        <div class="Tile" style="top: 50%; left: 30%;"></div>
+        <div class="Tile" style="top: 60%; left: 30%;"></div>
+        <div class="Tile" style="top: 70%; left: 30%;"></div>
+        <div class="Tile" style="top: 80%; left: 30%;"></div>
+        <div class="Tile" style="top: 90%; left: 30%;"></div>
+        <div class="Tile" style="top: 0%; left: 40%;"></div>
+        <div class="Tile" style="top: 10%; left: 40%;"></div>
+        <div class="Tile" style="top: 20%; left: 40%;"></div>
+        <div class="Tile" style="top: 30%; left: 40%;"></div>
+        <div class="Tile" style="top: 40%; left: 40%;"></div>
+        <div class="Tile" style="top: 50%; left: 40%;"></div>
+        <div class="Tile" style="top: 60%; left: 40%;"></div>
+        <div class="Tile" style="top: 70%; left: 40%;"></div>
+        <div class="Tile" style="top: 80%; left: 40%;"></div>
+        <div class="Tile" style="top: 90%; left: 40%;"></div>
+        <div class="Tile" style="top: 0%; left: 50%;"></div>
+        <div class="Tile" style="top: 10%; left: 50%;"></div>
+        <div class="Tile" style="top: 20%; left: 50%;"></div>
+        <div class="Tile" style="top: 30%; left: 50%;"></div>
+        <div class="Tile" style="top: 40%; left: 50%;"></div>
+        <div class="Tile" style="top: 50%; left: 50%;"></div>
+        <div class="Tile" style="top: 60%; left: 50%;"></div>
+        <div class="Tile" style="top: 70%; left: 50%;"></div>
+        <div class="Tile" style="top: 80%; left: 50%;"></div>
+        <div class="Tile" style="top: 90%; left: 50%;"></div>
+        <div class="Tile" style="top: 0%; left: 60%;"></div>
+        <div class="Tile" style="top: 10%; left: 60%;"></div>
+        <div class="Tile" style="top: 20%; left: 60%;"></div>
+        <div class="Tile" style="top: 30%; left: 60%;"></div>
+        <div class="Tile" style="top: 40%; left: 60%;"></div>
+        <div class="Tile" style="top: 50%; left: 60%;"></div>
+        <div class="Tile" style="top: 60%; left: 60%;"></div>
+        <div class="Tile" style="top: 70%; left: 60%;"></div>
+        <div class="Tile" style="top: 80%; left: 60%;"></div>
+        <div class="Tile" style="top: 90%; left: 60%;"></div>
+        <div class="Tile" style="top: 0%; left: 70%;"></div>
+        <div class="Tile" style="top: 10%; left: 70%;"></div>
+        <div class="Tile" style="top: 20%; left: 70%;"></div>
+        <div class="Tile" style="top: 30%; left: 70%;"></div>
+        <div class="Tile" style="top: 40%; left: 70%;"></div>
+        <div class="Tile" style="top: 50%; left: 70%;"></div>
+        <div class="Tile" style="top: 60%; left: 70%;"></div>
+        <div class="Tile" style="top: 70%; left: 70%;"></div>
+        <div class="Tile" style="top: 80%; left: 70%;"></div>
+        <div class="Tile" style="top: 90%; left: 70%;"></div>
+        <div class="Tile" style="top: 0%; left: 80%;"></div>
+        <div class="Tile" style="top: 10%; left: 80%;"></div>
+        <div class="Tile" style="top: 20%; left: 80%;"></div>
+        <div class="Tile" style="top: 30%; left: 80%;"></div>
+        <div class="Tile" style="top: 40%; left: 80%;"></div>
+        <div class="Tile" style="top: 50%; left: 80%;"></div>
+        <div class="Tile" style="top: 60%; left: 80%;"></div>
+        <div class="Tile" style="top: 70%; left: 80%;"></div>
+        <div class="Tile" style="top: 80%; left: 80%;"></div>
+        <div class="Tile" style="top: 90%; left: 80%;"></div>
+        <div class="Tile" style="top: 0%; left: 90%;"></div>
+        <div class="Tile" style="top: 10%; left: 90%;"></div>
+        <div class="Tile" style="top: 20%; left: 90%;"></div>
+        <div class="Tile" style="top: 30%; left: 90%;"></div>
+        <div class="Tile" style="top: 40%; left: 90%;"></div>
+        <div class="Tile" style="top: 50%; left: 90%;"></div>
+        <div class="Tile" style="top: 60%; left: 90%;"></div>
+        <div class="Tile" style="top: 70%; left: 90%;"></div>
+        <div class="Tile" style="top: 80%; left: 90%;"></div>
+        <div class="Tile" style="top: 90%; left: 90%;"></div>
+    </div>
+    <div id="Stat"></div>
+    <div id="Hist"></div>
+    <p>    </p>
+    <!-- <p>This is a test</p> -->
     <!--  Test section, HTML side
        <button onclick="SeedT()" id="Toggle">Random</button>
        <p id="Rando">Derp</p>
