Cleanup, Commenting, & Clearifing the code. --Next step creat a backup file for the [example code]

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="IndexStuff.css">
 </head>
 <body class="portal"  onload="bcktst()">
-    <div class="portal jump"></div> <!--This is to control text & give flow w/e adjusting the absolute & alignment of the grid of images -->
+    <div class="portal jump"></div> <!--Flow Control/likely background image work for the 'field' -->
     <div id="Play">
         <div class="Tile" style="top: 0%p; left: 0%;" onclick="bcktst()"> <img class="hold" src="" /> </div>
         <div class="Tile" style="top: 10%; left: 0%;"> <img class="hold" src="" /> </div>
@@ -110,16 +110,9 @@
         <div class="Tile" style="top: 70%; left: 90%;"> <img class="hold" src="" /> </div>
         <div class="Tile" style="top: 80%; left: 90%;"> <img class="hold" src="" /> </div>
         <div class="Tile" style="top: 90%; left: 90%;"> <img class="hold" src="" /> </div>
-    </div>
+    </div> <!-- 10x10 Tile Holder (Div w/ class & blank child image till function called)-->
     <div id="Stat"></div>
     <div id="Hist"></div>
-    <p>    </p>
-    <!-- <p>This is a test</p> -->
-    <!--  Test section, HTML side
-       <button onclick="SeedT()" id="Toggle">Random</button>
-       <p id="Rando">Derp</p>
-       <p id="RandoN"> <img class="hold" src="space2.jpg" /> </p>
-        -->
-
+    <p>    </p> <!-- Text area for 'Unknown' below hte play area. -->
 </body>
 </html>
