--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Test Page - WIP</title>
-    <script type="text/javascript" src="Scram.js"> </script>
+    <script type="text/javascript" src="Scram.js"></script>
+    <script type="text/javascript" src="Base.js"></script>
     <link rel="stylesheet" href="IndexStuff.css">
 </head>
 <body class="portal"  onload="bcktst()">
