Z-index, Divs, clean, notes, Name scheme, Data storage scheme, Base62 use, Organizational plans

--- a/index.html
+++ b/index.html
@@ -8,112 +8,212 @@
     <script type="text/javascript" src="Base.js"></script>
     <link rel="stylesheet" href="IndexStuff.css">
 </head>
-<body class="portal"  onload="bcktst()">
+<body class="portal area"  onload="color()">
     <div class="portal jump"></div> <!--Flow Control/likely background image work for the 'field' -->
-    <div id="Play">
-        <div class="Tile" style="top: 0%p; left: 0%;" onclick="bcktst()"> <img class="hold" src="" /> </div>
+    <div id="Play" class="area">
+        <div class="Tile" style="top: 0%; left: 0%;" onclick="color()"> <img class="hold" src="" /> </div>
+        <div id="00" class="SpriH" style="top: 0%; left: 0%"></div>
         <div class="Tile" style="top: 10%; left: 0%;"> <img class="hold" src="" /> </div>
+        <div id="10" class="SpriH" style="top: 10%; left: 0%"></div>
         <div class="Tile" style="top: 20%; left: 0%;"> <img class="hold" src="" /> </div>
+        <div id="20" class="SpriH" style="top: 20%; left: 0%"></div>
         <div class="Tile" style="top: 30%; left: 0%;"> <img class="hold" src="" /> </div>
+        <div id="30" class="SpriH" style="top: 30%; left: 0%"></div>
         <div class="Tile" style="top: 40%; left: 0%;"> <img class="hold" src="" /> </div>
+        <div id="40" class="SpriH" style="top: 40%; left: 0%"></div>
         <div class="Tile" style="top: 50%; left: 0%;"> <img class="hold" src="" /> </div>
+        <div id="50" class="SpriH" style="top: 50%; left: 0%"></div>
         <div class="Tile" style="top: 60%; left: 0%;"> <img class="hold" src="" /> </div>
+        <div id="60" class="SpriH" style="top: 60%; left: 0%"></div>
         <div class="Tile" style="top: 70%; left: 0%;"> <img class="hold" src="" /> </div>
+        <div id="70" class="SpriH" style="top: 70%; left: 0%"></div>
         <div class="Tile" style="top: 80%; left: 0%;"> <img class="hold" src="" /> </div>
+        <div id="80" class="SpriH" style="top: 80%; left: 0%"></div>
         <div class="Tile" style="top: 90%; left: 0%;"> <img class="hold" src="" /> </div>
+        <div id="90" class="SpriH" style="top: 90%; left: 0%"></div>
         <div class="Tile" style="top: 0%; left: 10%;"> <img class="hold" src="" /> </div>
+        <div id="01" class="SpriH" style="top: 0%; left: 10%"></div>
         <div class="Tile" style="top: 10%; left: 10%;"> <img class="hold" src="" /> </div>
+        <div id="11" class="SpriH" style="top: 10%; left: 10%"></div>
         <div class="Tile" style="top: 20%; left: 10%;"> <img class="hold" src="" /> </div>
+        <div id="21" class="SpriH" style="top: 20%; left: 10%"></div>
         <div class="Tile" style="top: 30%; left: 10%;"> <img class="hold" src="" /> </div>
+        <div id="31" class="SpriH" style="top: 30%; left: 10%"></div>
         <div class="Tile" style="top: 40%; left: 10%;"> <img class="hold" src="" /> </div>
+        <div id="41" class="SpriH" style="top: 40%; left: 10%"></div>
         <div class="Tile" style="top: 50%; left: 10%;"> <img class="hold" src="" /> </div>
+        <div id="51" class="SpriH" style="top: 50%; left: 10%"></div>
         <div class="Tile" style="top: 60%; left: 10%;"> <img class="hold" src="" /> </div>
+        <div id="61" class="SpriH" style="top: 60%; left: 10%"></div>
         <div class="Tile" style="top: 70%; left: 10%;"> <img class="hold" src="" /> </div>
+        <div id="71" class="SpriH" style="top: 70%; left: 10%"></div>
         <div class="Tile" style="top: 80%; left: 10%;"> <img class="hold" src="" /> </div>
+        <div id="81" class="SpriH" style="top: 80%; left: 10%"></div>
         <div class="Tile" style="top: 90%; left: 10%;"> <img class="hold" src="" /> </div>
+        <div id="91" class="SpriH" style="top: 90%; left: 10%"></div>
         <div class="Tile" style="top: 0%; left: 20%;"> <img class="hold" src="" /> </div>
+        <div id="02" class="SpriH" style="top: 0%; left: 20%"></div>
         <div class="Tile" style="top: 10%; left: 20%;"> <img class="hold" src="" /> </div>
+        <div id="12" class="SpriH" style="top: 10%; left: 20%"></div>
         <div class="Tile" style="top: 20%; left: 20%;"> <img class="hold" src="" /> </div>
+        <div id="22" class="SpriH" style="top: 20%; left: 20%"></div>
         <div class="Tile" style="top: 30%; left: 20%;"> <img class="hold" src="" /> </div>
+        <div id="32" class="SpriH" style="top: 30%; left: 20%"></div>
         <div class="Tile" style="top: 40%; left: 20%;"> <img class="hold" src="" /> </div>
+        <div id="42" class="SpriH" style="top: 40%; left: 20%"></div>
         <div class="Tile" style="top: 50%; left: 20%;"> <img class="hold" src="" /> </div>
+        <div id="52" class="SpriH" style="top: 50%; left: 20%"></div>
         <div class="Tile" style="top: 60%; left: 20%;"> <img class="hold" src="" /> </div>
+        <div id="62" class="SpriH" style="top: 60%; left: 20%"></div>
         <div class="Tile" style="top: 70%; left: 20%;"> <img class="hold" src="" /> </div>
+        <div id="72" class="SpriH" style="top: 70%; left: 20%"></div>
         <div class="Tile" style="top: 80%; left: 20%;"> <img class="hold" src="" /> </div>
+        <div id="82" class="SpriH" style="top: 80%; left: 20%"></div>
         <div class="Tile" style="top: 90%; left: 20%;"> <img class="hold" src="" /> </div>
+        <div id="92" class="SpriH" style="top: 90%; left: 20%"></div>
         <div class="Tile" style="top: 0%; left: 30%;"> <img class="hold" src="" /> </div>
+        <div id="03" class="SpriH" style="top: 0%; left: 30%"></div>
         <div class="Tile" style="top: 10%; left: 30%;"> <img class="hold" src="" /> </div>
+        <div id="13" class="SpriH" style="top: 10%; left: 30%"></div>
         <div class="Tile" style="top: 20%; left: 30%;"> <img class="hold" src="" /> </div>
+        <div id="23" class="SpriH" style="top: 20%; left: 30%"></div>
         <div class="Tile" style="top: 30%; left: 30%;"> <img class="hold" src="" /> </div>
+        <div id="33" class="SpriH" style="top: 30%; left: 30%"></div>
         <div class="Tile" style="top: 40%; left: 30%;"> <img class="hold" src="" /> </div>
+        <div id="43" class="SpriH" style="top: 40%; left: 30%"></div>
         <div class="Tile" style="top: 50%; left: 30%;"> <img class="hold" src="" /> </div>
+        <div id="53" class="SpriH" style="top: 50%; left: 30%"></div>
         <div class="Tile" style="top: 60%; left: 30%;"> <img class="hold" src="" /> </div>
+        <div id="63" class="SpriH" style="top: 60%; left: 30%"></div>
         <div class="Tile" style="top: 70%; left: 30%;"> <img class="hold" src="" /> </div>
+        <div id="73" class="SpriH" style="top: 70%; left: 30%"></div>
         <div class="Tile" style="top: 80%; left: 30%;"> <img class="hold" src="" /> </div>
+        <div id="83" class="SpriH" style="top: 80%; left: 30%"></div>
         <div class="Tile" style="top: 90%; left: 30%;"> <img class="hold" src="" /> </div>
+        <div id="93" class="SpriH" style="top: 90%; left: 30%"></div>
         <div class="Tile" style="top: 0%; left: 40%;"> <img class="hold" src="" /> </div>
+        <div id="04" class="SpriH" style="top: 0%; left: 40%"></div>
         <div class="Tile" style="top: 10%; left: 40%;"> <img class="hold" src="" /> </div>
+        <div id="14" class="SpriH" style="top: 10%; left: 40%"></div>
         <div class="Tile" style="top: 20%; left: 40%;"> <img class="hold" src="" /> </div>
+        <div id="24" class="SpriH" style="top: 20%; left: 40%"></div>
         <div class="Tile" style="top: 30%; left: 40%;"> <img class="hold" src="" /> </div>
+        <div id="34" class="SpriH" style="top: 30%; left: 40%"></div>
         <div class="Tile" style="top: 40%; left: 40%;"> <img class="hold" src="" /> </div>
+        <div id="44" class="SpriH" style="top: 40%; left: 40%"></div>
         <div class="Tile" style="top: 50%; left: 40%;"> <img class="hold" src="" /> </div>
+        <div id="54" class="SpriH" style="top: 50%; left: 40%"></div>
         <div class="Tile" style="top: 60%; left: 40%;"> <img class="hold" src="" /> </div>
+        <div id="64" class="SpriH" style="top: 60%; left: 40%"></div>
         <div class="Tile" style="top: 70%; left: 40%;"> <img class="hold" src="" /> </div>
+        <div id="74" class="SpriH" style="top: 70%; left: 40%"></div>
         <div class="Tile" style="top: 80%; left: 40%;"> <img class="hold" src="" /> </div>
+        <div id="84" class="SpriH" style="top: 80%; left: 40%"></div>
         <div class="Tile" style="top: 90%; left: 40%;"> <img class="hold" src="" /> </div>
+        <div id="94" class="SpriH" style="top: 90%; left: 40%"></div>
         <div class="Tile" style="top: 0%; left: 50%;"> <img class="hold" src="" /> </div>
+        <div id="05" class="SpriH" style="top: 0%; left: 50%"></div>
         <div class="Tile" style="top: 10%; left: 50%;"> <img class="hold" src="" /> </div>
+        <div id="15" class="SpriH" style="top: 10%; left: 50%"></div>
         <div class="Tile" style="top: 20%; left: 50%;"> <img class="hold" src="" /> </div>
+        <div id="25" class="SpriH" style="top: 20%; left: 50%"></div>
         <div class="Tile" style="top: 30%; left: 50%;"> <img class="hold" src="" /> </div>
+        <div id="35" class="SpriH" style="top: 30%; left: 50%"></div>
         <div class="Tile" style="top: 40%; left: 50%;"> <img class="hold" src="" /> </div>
+        <div id="45" class="SpriH" style="top: 40%; left: 50%"></div>
         <div class="Tile" style="top: 50%; left: 50%;"> <img class="hold" src="" /> </div>
+        <div id="55" class="SpriH" style="top: 50%; left: 50%"></div>
         <div class="Tile" style="top: 60%; left: 50%;"> <img class="hold" src="" /> </div>
+        <div id="65" class="SpriH" style="top: 60%; left: 50%"></div>
         <div class="Tile" style="top: 70%; left: 50%;"> <img class="hold" src="" /> </div>
+        <div id="75" class="SpriH" style="top: 70%; left: 50%"></div>
         <div class="Tile" style="top: 80%; left: 50%;"> <img class="hold" src="" /> </div>
+        <div id="85" class="SpriH" style="top: 80%; left: 50%"></div>
         <div class="Tile" style="top: 90%; left: 50%;"> <img class="hold" src="" /> </div>
+        <div id="95" class="SpriH" style="top: 90%; left: 50%"></div>
         <div class="Tile" style="top: 0%; left: 60%;"> <img class="hold" src="" /> </div>
+        <div id="06" class="SpriH" style="top: 0%; left: 60%"></div>
         <div class="Tile" style="top: 10%; left: 60%;"> <img class="hold" src="" /> </div>
+        <div id="16" class="SpriH" style="top: 10%; left: 60%"></div>
         <div class="Tile" style="top: 20%; left: 60%;"> <img class="hold" src="" /> </div>
+        <div id="26" class="SpriH" style="top: 20%; left: 60%"></div>
         <div class="Tile" style="top: 30%; left: 60%;"> <img class="hold" src="" /> </div>
+        <div id="36" class="SpriH" style="top: 30%; left: 60%"></div>
         <div class="Tile" style="top: 40%; left: 60%;"> <img class="hold" src="" /> </div>
+        <div id="46" class="SpriH" style="top: 40%; left: 60%"></div>
         <div class="Tile" style="top: 50%; left: 60%;"> <img class="hold" src="" /> </div>
+        <div id="56" class="SpriH" style="top: 50%; left: 60%"></div>
         <div class="Tile" style="top: 60%; left: 60%;"> <img class="hold" src="" /> </div>
+        <div id="66" class="SpriH" style="top: 60%; left: 60%"></div>
         <div class="Tile" style="top: 70%; left: 60%;"> <img class="hold" src="" /> </div>
+        <div id="76" class="SpriH" style="top: 70%; left: 60%"></div>
         <div class="Tile" style="top: 80%; left: 60%;"> <img class="hold" src="" /> </div>
+        <div id="86" class="SpriH" style="top: 80%; left: 60%"></div>
         <div class="Tile" style="top: 90%; left: 60%;"> <img class="hold" src="" /> </div>
+        <div id="96" class="SpriH" style="top: 90%; left: 60%"></div>
         <div class="Tile" style="top: 0%; left: 70%;"> <img class="hold" src="" /> </div>
+        <div id="07" class="SpriH" style="top: 0%; left: 70%"></div>
         <div class="Tile" style="top: 10%; left: 70%;"> <img class="hold" src="" /> </div>
+        <div id="17" class="SpriH" style="top: 10%; left: 70%"></div>
         <div class="Tile" style="top: 20%; left: 70%;"> <img class="hold" src="" /> </div>
+        <div id="27" class="SpriH" style="top: 20%; left: 70%"></div>
         <div class="Tile" style="top: 30%; left: 70%;"> <img class="hold" src="" /> </div>
+        <div id="37" class="SpriH" style="top: 30%; left: 70%"></div>
         <div class="Tile" style="top: 40%; left: 70%;"> <img class="hold" src="" /> </div>
+        <div id="47" class="SpriH" style="top: 40%; left: 70%"></div>
         <div class="Tile" style="top: 50%; left: 70%;"> <img class="hold" src="" /> </div>
+        <div id="57" class="SpriH" style="top: 50%; left: 70%"></div>
         <div class="Tile" style="top: 60%; left: 70%;"> <img class="hold" src="" /> </div>
+        <div id="67" class="SpriH" style="top: 60%; left: 70%"></div>
         <div class="Tile" style="top: 70%; left: 70%;"> <img class="hold" src="" /> </div>
+        <div id="77" class="SpriH" style="top: 70%; left: 70%"></div>
         <div class="Tile" style="top: 80%; left: 70%;"> <img class="hold" src="" /> </div>
+        <div id="87" class="SpriH" style="top: 80%; left: 70%"></div>
         <div class="Tile" style="top: 90%; left: 70%;"> <img class="hold" src="" /> </div>
+        <div id="97" class="SpriH" style="top: 90%; left: 70%"></div>
         <div class="Tile" style="top: 0%; left: 80%;"> <img class="hold" src="" /> </div>
+        <div id="08" class="SpriH" style="top: 0%; left: 80%"></div>
         <div class="Tile" style="top: 10%; left: 80%;"> <img class="hold" src="" /> </div>
+        <div id="18" class="SpriH" style="top: 10%; left: 80%"></div>
         <div class="Tile" style="top: 20%; left: 80%;"> <img class="hold" src="" /> </div>
+        <div id="28" class="SpriH" style="top: 20%; left: 80%"></div>
         <div class="Tile" style="top: 30%; left: 80%;"> <img class="hold" src="" /> </div>
+        <div id="38" class="SpriH" style="top: 30%; left: 80%"></div>
         <div class="Tile" style="top: 40%; left: 80%;"> <img class="hold" src="" /> </div>
+        <div id="48" class="SpriH" style="top: 40%; left: 80%"></div>
         <div class="Tile" style="top: 50%; left: 80%;"> <img class="hold" src="" /> </div>
+        <div id="58" class="SpriH" style="top: 50%; left: 80%"></div>
         <div class="Tile" style="top: 60%; left: 80%;"> <img class="hold" src="" /> </div>
+        <div id="68" class="SpriH" style="top: 60%; left: 80%"></div>
         <div class="Tile" style="top: 70%; left: 80%;"> <img class="hold" src="" /> </div>
+        <div id="78" class="SpriH" style="top: 70%; left: 80%"></div>
         <div class="Tile" style="top: 80%; left: 80%;"> <img class="hold" src="" /> </div>
+        <div id="88" class="SpriH" style="top: 80%; left: 80%"></div>
         <div class="Tile" style="top: 90%; left: 80%;"> <img class="hold" src="" /> </div>
+        <div id="98" class="SpriH" style="top: 90%; left: 80%"></div>
         <div class="Tile" style="top: 0%; left: 90%;"> <img class="hold" src="" /> </div>
+        <div id="09" class="SpriH" style="top: 0%; left: 90%"></div>
         <div class="Tile" style="top: 10%; left: 90%;"> <img class="hold" src="" /> </div>
+        <div id="19" class="SpriH" style="top: 10%; left: 90%"></div>
         <div class="Tile" style="top: 20%; left: 90%;"> <img class="hold" src="" /> </div>
+        <div id="29" class="SpriH" style="top: 20%; left: 90%"></div>
         <div class="Tile" style="top: 30%; left: 90%;"> <img class="hold" src="" /> </div>
+        <div id="39" class="SpriH" style="top: 30%; left: 90%"></div>
         <div class="Tile" style="top: 40%; left: 90%;"> <img class="hold" src="" /> </div>
+        <div id="49" class="SpriH" style="top: 40%; left: 90%"></div>
         <div class="Tile" style="top: 50%; left: 90%;"> <img class="hold" src="" /> </div>
+        <div id="59" class="SpriH" style="top: 50%; left: 90%"></div>
         <div class="Tile" style="top: 60%; left: 90%;"> <img class="hold" src="" /> </div>
+        <div id="69" class="SpriH" style="top: 60%; left: 90%"></div>
         <div class="Tile" style="top: 70%; left: 90%;"> <img class="hold" src="" /> </div>
+        <div id="79" class="SpriH" style="top: 70%; left: 90%"></div>
         <div class="Tile" style="top: 80%; left: 90%;"> <img class="hold" src="" /> </div>
+        <div id="89" class="SpriH" style="top: 80%; left: 90%"></div>
         <div class="Tile" style="top: 90%; left: 90%;"> <img class="hold" src="" /> </div>
+        <div id="99" class="SpriH" style="top: 90%; left: 90%"></div>
     </div> <!-- 10x10 Tile Holder (Div w/ class & blank child image till function called)-->
-    <div id="Stat"></div>
-    <div id="Hist"></div>
+    <div id="Stat" class="area"></div>
+    <div id="Hist" class="area"></div>
     <p>    </p> <!-- Text area for 'Unknown' below hte play area. -->
 </body>
 </html>
